--- a/深入理解Java虚拟机-JVM高级特性与最佳实践-第三版/自动内存管理机制/垃圾收集器与内存分配策略/垃圾收集器.md
+++ b/深入理解Java虚拟机-JVM高级特性与最佳实践-第三版/自动内存管理机制/垃圾收集器与内存分配策略/垃圾收集器.md
@@ -164,4 +164,23 @@ G1收集器可以实现在基本不牺牲吞吐量的前提下，完成低停顿
 因为G1收集器极力避免全区域的垃圾收集，之前的收集器进行收集的范围都是整个新生代或老年代，而G1收集器将整个Java堆划分为多个大小固定的独立区域Region，并且跟踪这些区域里面的垃圾堆积程度，在后台维护一个优先列表，每次根据允许的收集时间，优先收回垃圾最多的区域，也就是Garbage F染色体。
 区域划分以及有优先级的区域回收，保证了G1收集器在有限的时间内可以获得最高的收集效率。
 ```
+## 8、垃圾收集器收集
+```
+-XX:+UseSerialGC：在新生代和老年代使用串行收集器
+-XX:SurvivorRatio：设置eden区大小和survivior区大小的比例
+-XX:NewRatio:新生代和老年代的比
+-XX:+UseParNewGC：在新生代使用并行收集器
+-XX:+UseParallelGC ：新生代使用并行回收收集器
+-XX:+UseParallelOldGC：老年代使用并行回收收集器
+-XX:ParallelGCThreads：设置用于垃圾回收的线程数
+-XX:+UseConcMarkSweepGC：新生代使用并行收集器，老年代使用CMS+串行收集器
+-XX:ParallelCMSThreads：设定CMS的线程数量
+-XX:CMSInitiatingOccupancyFraction：设置CMS收集器在老年代空间被使用多少后触发
+-XX:+UseCMSCompactAtFullCollection：设置CMS收集器在完成垃圾收集后是否要进行一次内存碎片的整理
+-XX:CMSFullGCsBeforeCompaction：设定进行多少次CMS垃圾回收后，进行一次内存压缩
+-XX:+CMSClassUnloadingEnabled：允许对类元数据进行回收
+-XX:CMSInitiatingPermOccupancyFraction：当永久区占用率达到这一百分比时，启动CMS回收
+-XX:UseCMSInitiatingOccupancyOnly：表示只在到达阀值的时候，才进行CMS回收
+```
+
 
