--- a/深入理解Java虚拟机-JVM高级特性与最佳实践/自动内存管理机制/Java内存区域与内存溢出异常/运行时数据区域.md
+++ b/深入理解Java虚拟机-JVM高级特性与最佳实践/自动内存管理机制/Java内存区域与内存溢出异常/运行时数据区域.md
@@ -154,10 +154,7 @@ Java Heap
 |Java堆从内存回收角度，根据现代收集器的分代收集算法划分|
 |----|
 |老年代|
-|新生代|
-|Eden空间|
-|From Survivor	空间|
-|To Survivor空间|
+|新生代：Eden空间、From Survivor空间、To Survivor空间|
 
 
 |Java堆从内存分配角度划分|
