--- a/深入理解计算机系统/计算机系统漫游.md
+++ b/深入理解计算机系统/计算机系统漫游.md
@@ -11,7 +11,7 @@
 #include <stdio.h>
 
 int main(){
-	printf("hello world\n");
+	printf("hello, world\n");
 	return 0;
 }
 ```
@@ -75,5 +75,24 @@ gcc -o hello hello.c
 
 链接器合并预编译好的目标文件，得到可执行目标文件/程序，可以被加载到内存中，由系统执行。
 
+
+
+## 1.3、了解编译系统如何工作是大有益处的
+优化程序性能。
+理解链接时出现的错误。
+避免安全漏洞。
+
+## 1.4、处理器读并解释储存在内存中的指令
+在Unix系统上，运行存储在磁盘上的、由编译系统从源程序翻译而成的可执行目标文件：
+```
+//终端命令，直接在Mac终端运行
+./hello
+hello, world
+```
+命令行解释器将加载并运行可执行文件，然后等待程序终止。
+
+### 1.4.1、系统的硬件组成
+
+#### 总线
 
 
