--- a/深入理解计算机系统/计算机系统漫游.md
+++ b/深入理解计算机系统/计算机系统漫游.md
@@ -94,5 +94,23 @@ hello, world
 ### 1.4.1、系统的硬件组成
 
 #### 总线
+总线是贯穿整个系统的一组电子管道，携带信息字节并负责在各个部件间传递。
+
+#### IO设备
+IO设备是系统与外部世界的联系通道。例如键盘、鼠标、显示器、磁盘驱动器。
+每个IO设备都通过一个控制器或适配器与IO总线相连。
+控制器是IO设备本身或者系统的主印制电路板。
+适配器是一块插在主板插槽上的卡。
+
+#### 主存
+主存是一个临时存储设备，在处理器执行程序时，用来存放程序和程序处理的数据。
+从物理上说，主存是由一组动态随机存取存储器DRAM芯片组成的。
+从逻辑上说，存储器是一个线性的字节数组，每个字节都有其唯一的地址/数组索引，这些地址是从零开始的。
+
+#### 处理器
+中央处理单元CPU，简称处理器，是解释或执行存储在主存中指令的引擎。
+处理器的核心是一个大小为一个字节的存储设备或寄存器，称为程序计数器PC。
+在任何时候，PC都指向主存中的某条机器语言指令，也就是含有该条指令的地址。
+从系统通电开始，直到系统断电，处理器一直在不断地执行程序计数器指向的指令，再更新程序计数器，使其指向下一条指令。
 
 
