--- a/疯狂Java讲义/5、面向对象.md
+++ b/疯狂Java讲义/5、面向对象.md
@@ -176,3 +176,40 @@ D:调用不同
 
 
 
+
+
+
+
+|new|
+|----|
+|创建类的实例，也就是创建对象|
+
+
+|对象的使用|
+|----|
+|访问对象的成员变量|
+|调用对象的方法|
+|static修饰的成员变量和方法可以使用类来调用，也可以使用实例来调用。|
+|非static修饰的成员变量和方法，只可以使用实例来调用。|
+
+
+
+```java
+Person person1 = new Person();
+person1.name = "zhang";
+person1.age = 18;
+
+//引用变量person1和person2指向了同一个Person对象。
+Person person2 = person1;
+```
+
+
+|this|
+|----|
+|在构造器中引用的是：该构造方法正在初始化的对象|
+|在方法中引用的是：调用该方法的对象|
+|Java类中允许对象的一个成员直接调用另一个成员，可以省略this前缀。|
+|因为调用static方法的是类，this无法指向类，所以static修饰的方法中无法使用this，也就是静态成员无法直接访问非静态成员。|
+|不建议使用类的实例调用static修饰的成员变量、方法，因为static修饰的成员属于类不属于类的实例。|
+
+
