--- a/算法/排序算法.md
+++ b/算法/排序算法.md
@@ -11,7 +11,7 @@
 
 
 
-# 冒泡排序/简单比较排序
+# 1、冒泡排序/简单比较排序
 
 冒泡排序是简单比较排序。
 冒泡排序对数组的无序部分进行循环比较，每次比较两个元素，如果顺序错误就进行位置交换，循环结束后会在无序部分的尾部得到最值，成为有序部分；然后继续对剩余的无序部分进行循环比较，直到整个数组都成为有序部分为止。
@@ -180,7 +180,7 @@ public class BubbleSort {
 结果
 1 2 3 4 5 6 7 8 9 10 
 ```
-# 简单选择排序
+# 2、简单选择排序
 简单选择排序，将数组的无序部分中的元素进行比较，得到最值，并与无序部分的首部交换位置，成为数组的有序部分；然后继续对剩余的无序部分执行相同操作，直到整个数组都成为有序部分为止。
 
 助记码：
@@ -264,7 +264,7 @@ public class SelectionSort {
 1 2 3 4 6 7 8 8 9 10 
 ```
 
-# 简单插入排序
+# 3、简单插入排序
 
 
 取出未排序无序序列中的首部元素，在数组首部已排序有序序列中从后向前扫描，找到相应位置并插入，也就是未找到相应位置时进行位置交换，找到相应位置时停止位置交换，成为有序序列；然后继续从剩余无序序列中取出首部元素，进行插入，直到整个数组成为有序序列。例如扑克牌排序。
@@ -358,7 +358,7 @@ public class InsertionSort {
 1 2 3 4 5 6 7 8 9 10 
 ```
 
-## 希尔排序/改进版简单插入排序/缩小增量排序/递减增量排序
+## 4、希尔排序/改进版简单插入排序/缩小增量排序/递减增量排序
 
 希尔排序改进插入排序，使得对较大规模并且无序的数据也非常有效率
 
@@ -372,18 +372,18 @@ public class InsertionSort {
 
 希尔排序的时间度分析极其复杂，有的增量序列的复杂度至今还没人能够证明出来。
 
-Hibbard提出了另一个增量序列{1,3,7，...,2^k-1 }，这种序列的时间复杂度(最坏情形)为O(n^1.5 )
+Hibbard提出了另一个增量序列{1,3,7，...,2^k-1 }，这种序列的时间复杂度(最坏情形)为`O(n^1.5 )`
 
-Sedgewick提出了几种增量序列，其最坏情形运行时间为O（n^1.3 ）,其中最好的一个序列是{1,5,19,41,109,...}
+Sedgewick提出了几种增量序列，其最坏情形运行时间为`O（n^1.3 ）`,其中最好的一个序列是{1,5,19,41,109,...}
 
 虽然插入排序是稳定的，但是希尔排序在插入的时候是跳跃性插入的，有可能破坏稳定性。
 
 
 复杂度和稳定性：
 
-|平均时间复杂度|最差时间复杂度|最优时间复杂度|空间复杂度|稳定性|
-|----|----|----|----|----|----|----|----|----|
-| O(n log n)|O(n log^2 n)|O(n log^2 n) |O(1)|不稳定|
+|空间复杂度|稳定性|
+|----|----|
+|O(1)|不稳定|
 
 
 Java代码实现：
@@ -489,7 +489,7 @@ public class ShellSort {
 1 3 2 6 4 8 7 9 8 10 
 ```
 
-## 归并排序
+## 5、归并排序
 
 和选择排序一样，归并排序的性能不受输入数据的影响，但表现比选择排序好的多，因为始终都是O(n log n）的时间复杂度。代价是需要额外的内存空间。
 
@@ -500,4 +500,93 @@ public class ShellSort {
 	•对这两个子序列分别采用归并排序；
 	•将两个排序好的子序列合并成一个最终的排序序列。
 
+
+复杂度和稳定性：
+
+|平均时间复杂度|最差时间复杂度|最优时间复杂度|空间复杂度|稳定性|
+|----|----|----|----|----|----|----|----|----|
+| O(n log2 n)|O(n log2 n)|O(n log2 n) |O(n)|稳定|
+
+
+归并排序迭代版，Java代码实现：
+```java
+public class MergeSortIteration {
+    public static void main(String[] args) {
+        //TODO 归并排序迭代版
+        int[] arr = new int[]{10, 2, 8, 3, 6, 5, 4, 7, 9, 1};
+        sort(arr);
+    }
+
+    public static void sort(int[] arr) {
+        if (arr == null || arr.length < 2) {
+            return;
+        }
+        int[] orderedArr = new int[arr.length];
+        for (int i = 2; i < arr.length * 2; i *= 2) {
+            for (int j = 0; j < (arr.length + i - 1) / i; j++) {
+                int left = i * j;
+                int mid = left + i / 2 >= arr.length ? (arr.length - 1) : (left + i / 2);
+                int right = i * (j + 1) - 1 >= arr.length ? (arr.length - 1) : (i * (j + 1) - 1);
+                int start = left, l = left, m = mid;
+                while (l < mid && m <= right) {
+                    if (arr[l] < arr[m]) {
+                        orderedArr[start++] = arr[l++];
+                    } else {
+                        orderedArr[start++] = arr[m++];
+                    }
+                }
+                while (l < mid)
+                    orderedArr[start++] = arr[l++];
+                while (m <= right)
+                    orderedArr[start++] = arr[m++];
+                System.arraycopy(orderedArr, left, arr, left, right - left + 1);
+            }
+        }
+    }
+}
+```
+
+
+归并排序递归版，Java代码实现：
+```java
+public class MergeSortRecursive {
+    public static void main(String[] args) {
+        //TODO 归并排序递归版
+        int[] arr = new int[]{10, 2, 8, 3, 6, 5, 4, 7, 9, 1};
+        sort(arr);
+
+    }
+
+    private static void sort(int[] arr) {
+        if (arr == null || arr.length < 2) {
+            return;
+        }
+        int[] result = new int[arr.length];
+        merge_sort_recursive(arr, result, 0, arr.length - 1);
+    }
+
+    private static void merge_sort_recursive(int[] arr, int[] result, int start, int end) {
+        if (start >= end)
+            return;
+        int len = end - start, mid = (len >> 1) + start;
+        int start1 = start, end1 = mid;
+        int start2 = mid + 1, end2 = end;
+        merge_sort_recursive(arr, result, start1, end1);
+        merge_sort_recursive(arr, result, start2, end2);
+        int k = start;
+        while (start1 <= end1 && start2 <= end2)
+            result[k++] = arr[start1] < arr[start2] ? arr[start1++] : arr[start2++];
+        while (start1 <= end1)
+            result[k++] = arr[start1++];
+        while (start2 <= end2)
+            result[k++] = arr[start2++];
+        for (k = start; k <= end; k++)
+            arr[k] = result[k];
+    }
+}
+```
+
+欢迎关注Android技术堆栈，专注于Android技术学习的公众号，致力于提高Android开发者们的专业技能！
+
+![Android技术堆栈](https://mmbiz.qpic.cn/mmbiz_jpg/MADc6NnIysDjTRbKsg6y2G5eqqQkPDiak4V8jqKLmntDgAfFE8LOibxnSdfJESLJEM8ibrN9RGiamib4rYCt3cU08aQ/0?wx_fmt=jpeg)
 
