--- a/View/触摸事件的分发流程.md
+++ b/View/触摸事件的分发流程.md
@@ -1,7 +1,7 @@
-# ViewGroup对触摸事件的分发流程
 
-接着上篇《Activity对触摸事件的分发流程》，这篇我们讲《ViewGroup对触摸事件的分发流程》。
+接着上篇《Activity对触摸事件的分发流程》，这篇我们讲《ViewGroup和View对触摸事件的分发流程》。
 
+# 1、ViewGroup对触摸事件的分发流程
 
 ## ViewGroup.dispatchTouchEvent()
 
@@ -370,6 +370,11 @@ ArrayList<View> buildOrderedChildList() {
     }
 ```
 
+# 2、View对触摸事件的分发流程
+
+1、先由OnTouchListener的OnTouch()来处理事件，当返回true，则消费该事件，否则由onTouchEvent处理事件；
+2、当onTouchEvent返回true时，消费该事件，否则继续分发该事件。
+
 
 
 ## View.dispatchTouchEvent()
@@ -382,12 +387,229 @@ ArrayList<View> buildOrderedChildList() {
  */
 public boolean dispatchTouchEvent(MotionEvent event) {
     boolean result = false;
-    ...
+    final int actionMasked = event.getActionMasked();
+    if (actionMasked == MotionEvent.ACTION_DOWN) {
+        //在Down事件之前，如果存在滚动操作则停止。不存在则不进行操作
+        stopNestedScroll();
+    }
+
+    // mOnTouchListener.onTouch优先于onTouchEvent。
+    if (onFilterTouchEventForSecurity(event)) {
+        //当存在OnTouchListener，且视图状态为ENABLED时，调用onTouch()方法
+        ListenerInfo li = mListenerInfo;
+        if (li != null && li.mOnTouchListener != null
+                && (mViewFlags & ENABLED_MASK) == ENABLED
+                && li.mOnTouchListener.onTouch(this, event)) {
+            result = true; //如果已经消费事件，则返回True
+        }
+        //如果OnTouch（)没有消费Touch事件则调用OnTouchEvent()
+        if (!result && onTouchEvent(event)) { // [见小节2.5.1]
+            result = true; //如果已经消费事件，则返回True
+        }
+    }
+
+    if (!result && mInputEventConsistencyVerifier != null) {
+        mInputEventConsistencyVerifier.onUnhandledEvent(event, 0);
+    }
+
+    // 处理取消或抬起操作
+    if (actionMasked == MotionEvent.ACTION_UP ||
+            actionMasked == MotionEvent.ACTION_CANCEL ||
+            (actionMasked == MotionEvent.ACTION_DOWN && !result)) {
+        stopNestedScroll();
+    }
     return result;
 }
 ```
 
+## View.onTouchEvent()
+`View.java`
+```
+public boolean onTouchEvent(MotionEvent event) {
+    final float x = event.getX();
+    final float y = event.getY();
+    final int viewFlags = mViewFlags;
+
+    // 当View状态为DISABLED，如果可点击或可长按，则返回True，即消费事件
+    if ((viewFlags & ENABLED_MASK) == DISABLED) {
+        if (event.getAction() == MotionEvent.ACTION_UP && (mPrivateFlags & PFLAG_PRESSED) != 0) {
+            setPressed(false);
+        }
+        return (((viewFlags & CLICKABLE) == CLICKABLE ||
+                (viewFlags & LONG_CLICKABLE) == LONG_CLICKABLE));
+    }
+
+    if (mTouchDelegate != null) {
+        if (mTouchDelegate.onTouchEvent(event)) {
+            return true;
+        }
+    }
+
+    //当View状态为ENABLED，如果可点击或可长按，则返回True，即消费事件;
+    //与前面的的结合，可得出结论:只要view是可点击或可长按，则消费该事件.
+    if (((viewFlags & CLICKABLE) == CLICKABLE ||
+            (viewFlags & LONG_CLICKABLE) == LONG_CLICKABLE)) {
+        switch (event.getAction()) {
+            case MotionEvent.ACTION_UP:
+                boolean prepressed = (mPrivateFlags & PFLAG_PREPRESSED) != 0;
+                if ((mPrivateFlags & PFLAG_PRESSED) != 0 || prepressed) {
+                    boolean focusTaken = false;
+                    if (isFocusable() && isFocusableInTouchMode() && !isFocused()) {
+                        focusTaken = requestFocus();
+                    }
+
+                    if (prepressed) {
+                        setPressed(true, x, y);
+                   }
+
+                    if (!mHasPerformedLongPress) {
+                        //这是Tap操作，移除长按回调方法
+                        removeLongPressCallback();
+
+                        if (!focusTaken) {
+                            if (mPerformClick == null) {
+                                mPerformClick = new PerformClick();
+                            }
+                            //调用View.OnClickListener
+                            if (!post(mPerformClick)) {
+                                performClick();
+                            }
+                        }
+                    }
+
+                    if (mUnsetPressedState == null) {
+                        mUnsetPressedState = new UnsetPressedState();
+                    }
+
+                    if (prepressed) {
+                        postDelayed(mUnsetPressedState,
+                                ViewConfiguration.getPressedStateDuration());
+                    } else if (!post(mUnsetPressedState)) {
+                        mUnsetPressedState.run();
+                    }
+
+                    removeTapCallback();
+                }
+                break;
+
+            case MotionEvent.ACTION_DOWN:
+                mHasPerformedLongPress = false;
+
+                if (performButtonActionOnTouchDown(event)) {
+                    break;
+                }
+
+                //获取是否处于可滚动的视图内
+                boolean isInScrollingContainer = isInScrollingContainer();
+
+                if (isInScrollingContainer) {
+                    mPrivateFlags |= PFLAG_PREPRESSED;
+                    if (mPendingCheckForTap == null) {
+                        mPendingCheckForTap = new CheckForTap();
+                    }
+                    mPendingCheckForTap.x = event.getX();
+                    mPendingCheckForTap.y = event.getY();
+                    //当处于可滚动视图内，则延迟TAP_TIMEOUT，再反馈按压状态，用来判断用户是否想要滚动。默认延时为100ms
+                    postDelayed(mPendingCheckForTap, ViewConfiguration.getTapTimeout());
+                } else {
+                    //当不再滚动视图内，则立刻反馈按压状态
+                    setPressed(true, x, y);
+                    checkForLongClick(0); //检测是否是长按
+                }
+                break;
+
+            case MotionEvent.ACTION_CANCEL:
+                setPressed(false);
+                removeTapCallback();
+                removeLongPressCallback();
+                break;
+
+            case MotionEvent.ACTION_MOVE:
+                drawableHotspotChanged(x, y);
+
+                if (!pointInView(x, y, mTouchSlop)) {
+                    removeTapCallback();
+                    if ((mPrivateFlags & PFLAG_PRESSED) != 0) {
+                        removeLongPressCallback();
+                        setPressed(false);
+                    }
+                }
+                break;
+        }
+
+        return true;
+    }
+    return false;
+}
+```
+
+
+
+
+
+
 ## 总结
+
+
+|方法|返回|解释|
+|----|----|----|
+|Activity.dispatchTouchEvent()|true|消费事件|
+|Activity.dispatchTouchEvent()|false|消费事件|
+|Activity.dispatchTouchEvent()|super|向下分发事件给ViewGroup.dispatchTouchEvent()，如果是DOWN事件，则触发onUserInteraction()|
+|ViewGroup.dispatchTouchEvent()|true|消费事件|
+|ViewGroup.dispatchTouchEvent()|false|向上分发事件给Activity.onTouchEvent()|
+|ViewGroup.dispatchTouchEvent()|super|分发事件给ViewGroup.onInterceptTouchEvent()|
+|Activity.onTouchEvent()|true|消费事件|
+|Activity.onTouchEvent()|false|消费事件|
+|Activity.onTouchEvent()|super|消费事件|
+|ViewGroup.onInterceptTouchEvent()|true|分发事件给ViewGroup.OnTouchListener.onTouch()|
+|ViewGroup.onInterceptTouchEvent()|false|向下分发事件给View.dispatchTouchEvent()|
+|ViewGroup.onInterceptTouchEvent()|super|向下分发事件给View.dispatchTouchEvent()|
+|ViewGroup.OnTouchListener.onTouch()|true|消费事件|
+|ViewGroup.OnTouchListener.onTouch()|false|分发事件给ViewGroup.onTouchEvent()|
+|ViewGroup.onTouchEvent()|true|消费事件|
+|ViewGroup.onTouchEvent()|false|向上分发事件给Activity.onTouchEvent()|
+|ViewGroup.onTouchEvent()|super|向上分发事件给Activity.onTouchEvent()|
+|View.dispatchTouchEvent()|true|消费事件|
+|View.dispatchTouchEvent()|false|向下分发事件给View.OnTouchListener.onTouch()|
+|View.dispatchTouchEvent()|super|向下分发事件给View.OnTouchListener.onTouch()|
+|View.OnTouchListener.onTouch()|true|消费事件|
+|View.OnTouchListener.onTouch()|false|分发事件给View.onTouchEvent()|
+|View.onTouchEvent()|true|消费事件|
+|View.onTouchEvent()|false|向上分发事件给ViewGroup.OnTouchListener.onTouch()|
+|View.onTouchEvent()|super|消费事件|
+
+1、onInterceptTouchEvent返回值true表示事件拦截， onTouch/onTouchEvent 返回值true表示事件消费。
+
+2、触摸事件先交由Activity.dispatchTouchEvent。再一层层往下分发，当中间的ViewGroup都不拦截时，进入最底层的View后，开始由最底层的OnTouchEvent来处理，如果一直不消费，则最后返回到Activity.OnTouchEvent。
+
+3、ViewGroup才有onInterceptTouchEvent拦截方法。在分发过程中，中间任何一层ViewGroup都可以直接拦截，则不再往下分发，而是交由发生拦截操作的ViewGroup的OnTouchEvent来处理。
+
+4、子View可调用requestDisallowInterceptTouchEvent方法，来设置disallowIntercept=true，从而阻止父ViewGroup的onInterceptTouchEvent拦截操作。
+
+5、OnTouchEvent由下往上冒泡时，当中间任何一层的OnTouchEvent消费该事件，则不再往上传递，表示事件已处理。
+
+6、如果View没有消费ACTION_DOWN事件，则之后的ACTION_MOVE等事件都不会再接收。
+
+7、只要View.onTouchEvent是可点击或可长按，则消费该事件.
+
+8、onTouch优先于onTouchEvent执行，onTouch的位置在onTouchEvent前面。当onTouch返回true,则不执行onTouchEvent，否则会执行onTouchEvent。onTouch只有View设置了OnTouchListener，且是enable的才执行该方法。
+
+
+
+![](https://github.com/chaozhouzhang/learning-summary/blob/master/View/ViewGroup%E5%AF%B9%E8%A7%A6%E6%91%B8%E4%BA%8B%E4%BB%B6%E7%9A%84%E5%88%86%E5%8F%91%E6%B5%81%E7%A8%8B.png?raw=true)
+
+
+
+
+
+
+## 后续
+View对触摸事件的分发流程，笔者将在接下来的文章进行讲解，敬请关注。
+
+欢迎关注Android技术堆栈，专注于Android技术学习的公众号，致力于提高Android开发者们的专业技能！
+
+![Android技术堆栈](https://mmbiz.qpic.cn/mmbiz_jpg/MADc6NnIysDjTRbKsg6y2G5eqqQkPDiak4V8jqKLmntDgAfFE8LOibxnSdfJESLJEM8ibrN9RGiamib4rYCt3cU08aQ/0?wx_fmt=jpeg)
 
 
 
