--- a/View/触摸事件的分发流程.md
+++ b/View/触摸事件的分发流程.md
@@ -1,6 +1,9 @@
 
 接着上篇《Activity对触摸事件的分发流程》，这篇我们讲《ViewGroup和View对触摸事件的分发流程》。
 
+![](https://github.com/chaozhouzhang/learning-summary/blob/master/View/%E8%A7%A6%E6%91%B8%E4%BA%8B%E4%BB%B6%E7%9A%84%E5%88%86%E5%8F%91%E6%B5%81%E7%A8%8B.png?raw=true)
+
+
 # 1、ViewGroup对触摸事件的分发流程
 
 ## ViewGroup.dispatchTouchEvent()
@@ -192,7 +195,6 @@
                     target = next;
                 }
             }
-            
             // 更新列表的触摸目标指针或取消，如果需要。
             if (canceled
                     || actionMasked == MotionEvent.ACTION_UP
@@ -424,13 +426,12 @@ public boolean dispatchTouchEvent(MotionEvent event) {
 
 ## View.onTouchEvent()
 `View.java`
-```
+```java
 public boolean onTouchEvent(MotionEvent event) {
     final float x = event.getX();
     final float y = event.getY();
     final int viewFlags = mViewFlags;
-
-    // 当View状态为DISABLED，如果可点击或可长按，则返回True，即消费事件
+	  // 当View状态为DISABLED，如果可点击或可长按，则返回True，即消费事件
     if ((viewFlags & ENABLED_MASK) == DISABLED) {
         if (event.getAction() == MotionEvent.ACTION_UP && (mPrivateFlags & PFLAG_PRESSED) != 0) {
             setPressed(false);
@@ -548,7 +549,7 @@ public boolean onTouchEvent(MotionEvent event) {
 
 
 
-## 总结
+# 总结
 
 
 |方法|返回|解释|
@@ -597,15 +598,9 @@ public boolean onTouchEvent(MotionEvent event) {
 
 
 
-![](https://github.com/chaozhouzhang/learning-summary/blob/master/View/ViewGroup%E5%AF%B9%E8%A7%A6%E6%91%B8%E4%BA%8B%E4%BB%B6%E7%9A%84%E5%88%86%E5%8F%91%E6%B5%81%E7%A8%8B.png?raw=true)
 
 
 
-
-
-
-## 后续
-View对触摸事件的分发流程，笔者将在接下来的文章进行讲解，敬请关注。
 
 欢迎关注Android技术堆栈，专注于Android技术学习的公众号，致力于提高Android开发者们的专业技能！
 
